--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy AI Image Analyzer
+name: Deploy to Hugging Face Spaces
 on:
   push:
     branches: [ main ]
@@ -6,12 +6,26 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Install dependencies
-        run: pip install -r requirements.txt  # Adjust if using Node.js, etc.
-      - name: Deploy to Hugging Face Spaces
-        uses: huggingface/huggingface_hub@main
+      - name: Checkout code
+        uses: actions/checkout@v4
+        
+      - name: Set up Python
+        uses: actions/setup-python@v4
         with:
-          hf_token: ${{ secrets.HF_TOKEN }}
-          repo_id: MudauRI/AI-image-analyzer
-          space_sdk: gradio  # or "streamlit" if applicable
+          python-version: '3.9'
+          
+      - name: Install dependencies
+        run: |
+          pip install huggingface-hub
+          pip install -r requirements.txt  
+          
+      - name: Deploy to Hugging Face
+        env:
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: |
+          huggingface-cli login --token $HF_TOKEN
+          huggingface-cli upload \
+            MudauRI/AI-image-analyzer \
+            ./ \
+            --repo-type=space \
+            --space-sdk=gradio  
